made some small changes to design of lobby and tournament brackets design

--- a/index.html
+++ b/index.html
@@ -87,14 +87,14 @@
 					<div class="row">
 						<h2 class="mb-5">Lobby</h5>
 						<div class="col-6">
-							<p class="card">player name 1</p>
-							<p class="card">player name 2</p>
-							<p class="card">player name 3</p>
+							<p class="text-light">player name 1</p>
+							<p class="text-light">player name 2</p>
+							<p class="text-light">player name 3</p>
 						</div>
 						<div class="col-6">
-							<p class="card">player name 4</p>
-							<p class="card">...</p>
-							<p class="card">...</p>	
+							<p class="text-light">player name 4</p>
+							<p class="text-light">...</p>
+							<p class="text-light">...</p>	
 						</div>
 					</div>
 				</div>
@@ -109,7 +109,7 @@
 							<h3>Round 2</h3>
 						</div>
 						<div class="col-3 text-light">
-							<h3>Round 3</h3>
+							<h3>Finals</h3>
 						</div>
 						<div class="col-3 text-light">
 							<h3>Winner</h3>
