--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 			<!-- Game Content -->
 			<main class="col d-flex align-items-center justify-content-center">
 				<!-- Select Game Mode -->
-				<div class="game-menu text-center d-none">
+				<div class="game-menu text-center">
 					<h1 class="text-light mb-5">Start game</h1>
 					<h5 class="text-light mb-3">Select Game Mode</h5>
 					<!-- Select Game Mode Panel -->
@@ -100,7 +100,7 @@
 				</div>
 
 				<!-- Tournament Brackets -->
-				<div class="container text-center">
+				<div class="container text-center d-none">
 					<div class="row">
 						<div class="col-3 text-light">
 							<h3>Round 1</h3>
@@ -169,7 +169,7 @@
 	
 
 	<!-- Login Modal -->
-	<div id="login-modal" class="modal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+	<div id="login-modalo" class="modal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
 		<div class="modal-dialog modal-dialog-centered">
 			<div class="modal-content bg-gradient" style="background-color: rgb(80, 0, 80);">
 				<div class="modal-header">
