Remote working with options, need further frontend

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 			<!-- Game Content -->
 			<main class="col d-flex align-items-center justify-content-center">
 				<!-- Select Game Mode -->
-				<div class="game-menu text-center d-none">
+				<div class="game-menu text-center">
 					<h1 class="text-light mb-5">Start game</h1>
 					<h5 class="text-light mb-3">Select Game Mode</h5>
 					<!-- Select Game Mode Panel -->
@@ -82,7 +82,7 @@
 				</div>
 
 				<!-- Tournament Waiting Room -->
-				<div class="text-center d-none">
+				<div class="text-center d-none waiting-room">
 					<h1 class="text-light mb-5">Waiting For Players (4/6)</h1>
 					<div class="row">
 						<h2 class="mb-5">Lobby</h5>
@@ -100,7 +100,7 @@
 				</div>
 
 				<!-- Tournament Brackets -->
-				<div class="container text-center">
+				<div class="container text-center d-none">
 					<div class="row">
 						<div class="col-3 text-light">
 							<h3>Round 1</h3>
@@ -159,7 +159,7 @@
 					</div>
 				</div>
 
-				<!-- <div class="game hidden">
+				<div class="game d-none">
 					<canvas></canvas>
 					<p>Control the left player by using up and down arrow keys</p>
 				</div>
