--- a/index.html
+++ b/index.html
@@ -67,10 +67,15 @@
 						<button id="remoteModeBtn" type="button" class="btn bg-gradient btn-block mb-2" style="background-color: rgb(238, 130, 238)">Remote vs</button>
 						<!-- Tournaments Mode -->
 						<button id="tournamentModeBtn" type="button" class="btn bg-gradient btn-block mb-2" style="background-color: rgb(238, 130, 238)">Tournaments</button>
-						<!-- Tounament Display Name Selection Panel -->
-						<form id="tournamentDisplayName" class="d-none">
+						<!-- Tounament Info Panel -->
+						<form id="tournamentPlayerInfo" class="d-none">
+							<!-- Display Name -->
 							<div class="my-4">
 								<input type="text" class="form-control text-center" placeholder="Tournament Display Name" required>
+							</div>
+							<!-- Game Id -->
+							<div class="my-4">
+								<input type="text" class="form-control text-center" placeholder="Game Id" required>
 							</div>
 						</form>
 						<!-- Join And Create Game Button -->
@@ -80,7 +85,7 @@
 						</div>
 						<div class="my-3">
 							<button id="joinTournamentBtn" type="button" class="btn bg-gradient btn-block mb-2 d-none" style="background-color: rgb(238, 130, 238)">Join Tournament</button>
-							<button id="createTournamentBtn" type="button" class="btn bg-gradient btn-block mb-2 d-none" style="background-color: rgb(238, 130, 238)">Create Tournament</button>
+							<button id="createTournamentBtn" type="button" class="btn bg-gradient btn-block mb-2 d-none formnovalidate" style="background-color: rgb(238, 130, 238)">Create Tournament</button>
 						</div>
 					</div>
 				</div>
