added a seperate set of buttons for the tournament create and join buttons for better readability and has it his required for some game features

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 						</div>
 						<div class="my-3">
 							<button id="joinTournamentBtn" type="button" class="btn bg-gradient btn-block mb-2 d-none" style="background-color: rgb(238, 130, 238)">Join Tournament</button>
-							<button id="createTournamentBtn" type="button" class="btn bg-gradient btn-block mb-2 d-none formnovalidate" style="background-color: rgb(238, 130, 238)">Create Tournament</button>
+							<button id="createTournamentBtn" type="button" class="btn bg-gradient btn-block mb-2 d-none" formnovalidate style="background-color: rgb(238, 130, 238)">Create Tournament</button>
 						</div>
 					</div>
 				</div>
