--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 				
 
 				<!-- Select Game Mode -->
-				<div class="game-menu text-center">
+				<div class="game-menu d-none text-center">
 					<h1 class="text-light mb-5">Start game</h1>
 					<h5 class="text-light mb-3">Select Game Mode</h5>
 					<!-- Select Game Mode Panel -->
