--- a/frontend/index.html
+++ b/frontend/index.html
@@ -19,8 +19,10 @@
 	<script src="javascript/match-history.js" defer></script>
 	<script type="module" src="javascript/game-logic.js"></script>
 	<script src="javascript/game-ui.js" defer></script>
-	<script src="javascript/jwt-test.js" defer></script>
+	<script src="javascript/tokens.js" defer></script>
 	<script src="https://cdn.socket.io/4.0.0/socket.io.min.js"></script>
+	
+	<script src="javascript/jwt-test.js" defer></script>
 
 	<!-- Icons -->
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
