--- a/index.html
+++ b/index.html
@@ -87,10 +87,16 @@
 								<button id="createTournamentBtn" type="submit" class="btn bg-gradient btn-block mb-2 d-none" formnovalidate style="background-color: rgb(238, 130, 238)">Create Tournament</button>
 							</div>
 						</form>
-						<div class="my-3">
-							<button id="joinRemoteBtn" type="button" class="btn bg-gradient btn-block mb-2 d-none" style="background-color: rgb(238, 130, 238)">Join Game</button>
-							<button id="createRemoteBtn" type="button" class="btn bg-gradient btn-block mb-2 d-none" style="background-color: rgb(238, 130, 238)">Create Game</button>
-						</div>
+						<form id="remotePlayerInfo" class="d-none">
+							<!-- Game Id -->
+							<div class="my-4">
+								<input type="text" class="form-control text-center" placeholder="Game Id">
+							</div>
+							<div class="my-3">
+								<button id="joinRemoteBtn" type="submit" class="btn bg-gradient btn-block mb-2 d-none" style="background-color: rgb(238, 130, 238)">Join Game</button>
+								<button id="createRemoteBtn" type="submit" class="btn bg-gradient btn-block mb-2 d-none" style="background-color: rgb(238, 130, 238)">Create Game</button>
+							</div>
+						</form>
 					</div>
 				</div>
 
@@ -99,18 +105,16 @@
 					<h1 class="text-light mb-5">Waiting For Players (4/6)</h1>
 					<div class="row">
 						<div class="col-6">
-							<p class="participant_name text-light">player name 1</p>
-							<p class="participant_name text-light">player name 2</p>
-							<p class="participant_name text-light">player name 3</p>
+							<p class="participant_name text-light">Waiting for player...</p>
+							<p class="participant_name text-light">Waiting for player...</p>
 						</div>
 						<div class="col-6">
-							<p class="participant_name text-light">player name 4</p>
-							<p class="participant_name text-light">...</p>
-							<p class="participant_name text-light">...</p>	
+							<p class="participant_name text-light">Waiting for player...</p>
+							<p class="participant_name text-light">Waiting for player...</p>	
 						</div>
 						<h5 class="mt-5 d-flex justify-content-center text-light">
 							<p class="text-light" >Game Id:</p>
-							<p id="tournamentGameId" class="text-light">123456789</p>
+							<p id="tournamentGameId" class="text-light"></p>
 						</h5>
 					</div>
 				</div>
