added some changes to the change password feature to allow functionality with backend

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -661,13 +661,15 @@
 						</div>
 					</div>					
 					<!-- Change Password -->
-					<div class="d-flex align-items-center mb-3">
-						<p class="text-light pe-3 mb-0">Change Password</p>
-						<input id="newPassword" type="text" class="form-control w-auto" placeholder="New Password">
-						<div class="text-center ps-3">
-							<button type="submit" class="btn btn-sm bg-gradient btn-block" style="background-color: rgb(238, 130, 238)">Change</button>
-						</div>
-					</div>		
+					<form id="newPassword">
+						<div class="d-flex align-items-center mb-3">
+							<p class="text-light pe-3 mb-0">Change Password</p>
+							<input id="newPasswordInput" type="text" class="form-control w-auto" placeholder="New Password">
+							<div class="text-center ps-3">
+								<button type="submit" class="btn btn-sm bg-gradient btn-block" style="background-color: rgb(238, 130, 238)">Change</button>
+							</div>
+						</div>		
+					</form>
 					<!-- Change Avatar -->
 					<div class="d-flex align-items-center mb-3">
 						<label for="settingAvatar" class="text-light pe-3 mb-0">Change Avatar:</label>
