--- a/index.html
+++ b/index.html
@@ -120,13 +120,10 @@
 				</div>
 
 				<!-- Tournament Brackets -->
-				<div class="container text-center d-none d-none">
+				<div class="container text-center d-none">
 					<div class="row">
 						<div class="col-3 text-light">
 							<h3>Round 1</h3>
-						</div>
-						<div class="col-3 text-light">
-							<h3>Round 2</h3>
 						</div>
 						<div class="col-3 text-light">
 							<h3>Finals</h3>
@@ -139,42 +136,26 @@
 					<div class="row">
 						<div class="col-3 bracket-column justify-content-center">
 							<div class="py-5 px-4">
-								<div class="border p-3 text-light">PLAYER 1</div>
-								<div class="border p-3 text-light">PLAYER 2</div>
+								<div class="border p-3 text-light">...</div>
+								<div class="border p-3 text-light">...</div>
 							</div>
 							<div class="py-5 px-4">
-								<div class="border p-3 text-light">PLAYER 3</div>
-								<div class="border p-3 text-light">PLAYER 4</div>
-							</div>
-							<div class="py-5 px-4">
-								<div class="border p-3 text-light">PLAYER 5</div>
-								<div class="border p-3 text-light">PLAYER 6</div>
+								<div class="border p-3 text-light">...</div>
+								<div class="border p-3 text-light">...</div>
 							</div>
 						</div>
 			
-						<!-- Round 2 -->
+						<!-- Finals -->
 						<div class="col-3 bracket-column justify-content-center">
 							<div class="py-5 px-4">
-								<div class="border p-3 text-light">PLAYER 1</div>
-								<div class="border p-3 text-light">PLAYER 2</div>
-							</div>
-							<div class="py-5 px-4">
-								<div class="border p-3 text-light">PLAYER 3</div>
-								<div class="border p-3 text-light">PLAYER 4</div>
-							</div>
-						</div>
-			
-						<!-- Round 3 -->
-						<div class="col-3 bracket-column justify-content-center">
-							<div class="py-5 px-4">
-								<div class="border p-3 text-light">PLAYER 1</div>
-								<div class="border p-3 text-light">PLAYER 2</div>
+								<div class="border p-3 text-light">...</div>
+								<div class="border p-3 text-light">...</div>
 							</div>
 						</div>
 			
 						<!-- Final Round -->
 						<div class="col-3 bracket-column justify-content-center">
-							<div class="border px-3 py-4 text-light">Player 1</div>
+							<div class="border px-3 py-4 text-light">...</div>
 						</div>
 					</div>
 				</div>
