added mockup online status for the chat. requires integration with backend

--- a/index.html
+++ b/index.html
@@ -243,8 +243,10 @@
 							<!-- Contact Messages -->
 							<div class="d-flex align-items-center border-bottom">
 								<i class="bi bi-person-square text-light h1"></i>
-								<div class="ms-3">
+								<div class="ms-3 d-flex">
 									<h4 id="selectedContactName" class="text-light mb-1"></h4>
+									<!-- TODO: make status display change if the player is online or offline -->
+									<h4 id="onlineStatus" class="text-light mb-1 ms-3">(Online)</h4>
 								</div>
 								<div id="chatDropdownMenu" class="dropdown ms-auto"></div>
 							</div>	
