organized avatar conversion code to it own file

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -19,6 +19,7 @@
 	<script src="javascript/match-history.js" defer></script>
 	<script type="module" src="javascript/game-logic.js"></script>
 	<script src="javascript/tokens.js" defer></script>
+	<script src="javascript/avatar.js" defer></script>
 	<script src="javascript/game-ui.js" defer></script>
 	<script src="https://cdn.socket.io/4.0.0/socket.io.min.js"></script>
 
@@ -168,7 +169,6 @@
 			</main>
 		</div>
 	</div>
-	
 
 	<!-- Login Modal -->
 	<div id="login-modal" class="modal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
