--- a/frontend/index.html
+++ b/frontend/index.html
@@ -275,8 +275,9 @@
 					<div class="row align-items-center">
 						<!-- User Identification -->
 						<div class="col-4 text-center">
+							<!-- User Profile Picture -->
 							<div class="row pb-4">
-								<i class="bi bi-person-square h1 text-light"></i> <!-- User Profile Picture -->
+								<div class="mb-2"><img id="playerStatsAvatar" src="" width="100" height="100"></div>
 								<p class="text-light">(PLAYER_USERNAME)</p> <!-- User Username -->
 							</div>
 							<p class="text-light">Games Played: <span id="gamesPlayed"></span></p>
