added a button to filter friends on the chat

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -310,7 +310,7 @@
 					<div class="row">
 						<!-- Friends Column -->
 						<div class="col-4 d-flex flex-column border-end">
-							<h5 class="text-light">Friends</h5>
+							<button id="friendsOnlyBtn" type="button" class="btn mb-2 border" style="background-color: rgba(220, 220, 220, 0.3)">Show Friends Only</button>
 							<!-- List of friends (example) -->
 							<div class="flex-grow-1 overflow-auto" id="contacts" style="height: 500px;">
 								<!-- Example Contacts -->
