--- a/frontend/index.html
+++ b/frontend/index.html
@@ -56,11 +56,11 @@
 			<!-- Game Content -->
 			<main class="col d-flex align-items-center justify-content-center">
 				<!-- JWT Test -->
-				<div>
+				<!-- <div>
 					<button id="jwt-test-btn">jwt test</button>
-				</div>
+				</div> -->
 				<!-- Select Game Mode -->
-				<div class="game-menu text-center d-none">
+				<div class="game-menu text-center">
 					<h1 class="text-light mb-5">Start game</h1>
 					<h5 class="text-light mb-3">Select Game Mode</h5>
 					<!-- Select Game Mode Panel -->
@@ -122,7 +122,7 @@
 				</div>
 
 				<!-- Tournament Brackets -->
-				<div class="container text-center d-none">
+				<div class="container text-center d-none tournament-brackets">
 					<div class="row">
 						<div class="col-3 text-light">
 							<h3>Round 1</h3>
@@ -138,12 +138,12 @@
 					<div class="row">
 						<div class="col-3 bracket-column justify-content-center">
 							<div class="py-5 px-4">
-								<div class="border p-3 text-light">...</div>
-								<div class="border p-3 text-light">...</div>
+								<div class="border p-3 text-light round-1-participant">...</div>
+								<div class="border p-3 text-light round-1-participant">...</div>
 							</div>
 							<div class="py-5 px-4">
-								<div class="border p-3 text-light">...</div>
-								<div class="border p-3 text-light">...</div>
+								<div class="border p-3 text-light round-1-participant">...</div>
+								<div class="border p-3 text-light round-1-participant">...</div>
 							</div>
 						</div>
 			
@@ -155,7 +155,7 @@
 							</div>
 						</div>
 			
-						<!-- Final Round -->
+						<!-- Winner -->
 						<div class="col-3 bracket-column justify-content-center">
 							<div class="border px-3 py-4 text-light">...</div>
 						</div>
@@ -171,7 +171,7 @@
 	</div>
 
 	<!-- Login Modal -->
-	<div id="login-modal" class="modal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+	<div id="login-modalo" class="modal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
 		<div class="modal-dialog modal-dialog-centered">
 			<div class="modal-content bg-gradient" style="background-color: rgb(80, 0, 80);">
 				<div class="modal-header">
