fetching user stats working on self. fixed small errors and migrations on backend

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -278,7 +278,7 @@
 							<!-- User Profile Picture -->
 							<div class="row pb-4">
 								<div class="mb-2"><img id="playerStatsAvatar" src="" width="100" height="100"></div>
-								<p class="text-light">(PLAYER_USERNAME)</p> <!-- User Username -->
+								<p id="playerStatsUsername" class="text-light">(PLAYER_USERNAME)</p> <!-- User Username -->
 							</div>
 							<p class="text-light">Games Played: <span id="gamesPlayed"></span></p>
 							<p class="text-light">Wins: <span id="wins"></span></p>
