--- a/frontend/index.html
+++ b/frontend/index.html
@@ -162,7 +162,7 @@
 					</div>
 					<div id="tournament-text-box" class="d-none">
 						<h4 id="tournament-text" class="text-light"></h4>
-						<button id="return-home" class="btn bg-gradient btn-block mb-2" style="background-color: rgb(238, 130, 238)">Main Menu</button>
+						<button id="tournament-home-button" class="btn bg-gradient btn-block mb-2 home-button" style="background-color: rgb(238, 130, 238)">Main Menu</button>
 					</div>
 				</div>
 				<div class="game d-none">
