--- a/frontend/index.html
+++ b/frontend/index.html
@@ -102,9 +102,26 @@
 					</div>
 				</div>
 
+				<!-- Remote Game Waiting Room -->
+				<div class="text-center d-none remote-waiting-room">
+					<h1 class="text-light mb-5">Waiting For Players...</h1>
+					<div class="row">
+						<div class="col-6">
+							<p class="remote_participant_name text-light">Waiting for player...</p>
+						</div>
+						<div class="col-6">
+							<p class="remote_participant_name text-light">Waiting for player...</p>
+						</div>
+						<h5 class="mt-5 d-flex justify-content-center text-light">
+							<p class="text-light" >Game Id: </p>
+							<p id="remoteGameID" class="text-light"></p>
+						</h5>
+					</div>
+				</div>
+
 				<!-- Tournament Waiting Room -->
 				<div class="text-center d-none waiting-room">
-					<h1 class="text-light mb-5">Waiting For Players (4/6)</h1>
+					<h1 class="text-light mb-5">Waiting For Players...</h1>
 					<div class="row">
 						<div class="col-6">
 							<p class="participant_name text-light">Waiting for player...</p>
