was able to send a message to the backend but could not test with a second user

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -185,7 +185,7 @@
 		</div>
 	</div>
 
-	<!--Modal -->
+	<!--Login Modal -->
 	<div id="login-modal" class="modal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
 		<div class="modal-dialog modal-dialog-centered">
 			<div class="modal-content bg-gradient" style="background-color: rgb(80, 0, 80);">
