local mode btn added

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -178,8 +178,11 @@
 						<button id="tournament-home-button" class="btn bg-gradient btn-block mb-2 home-button" style="background-color: rgb(238, 130, 238)">Main Menu</button>
 					</div>
 				</div>
-				<div class="game d-none">
+				<div class="game d-flex flex-column d-none gap-3">
 					<canvas></canvas>
+					<div class="d-flex align-items-center justify-content-center">
+						<button id="canvas-home-button" class="btn bg-gradient btn-block mb-2 home-button d-none" style="background-color: rgb(238, 130, 238)">Main Menu</button>
+					</div>
 				</div>
 			</main>
 		</div>
