added friends filter. requires testing

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -334,7 +334,8 @@
 								<!-- Example Contacts -->
 								<div class="p-2">
 									<!-- First Contact -->
-									<div id="chatContacts"></div>
+									<div id="chatContacts" class=""></div>
+									<div id="friendsContacts" class="d-none"></div>
 								</div>
 							</div>
 						</div>
