--- a/frontend/index.html
+++ b/frontend/index.html
@@ -350,7 +350,7 @@
 									<h4 id="onlineStatus" class="text-light mb-1 ms-3">(Online)</h4>
 								</div>
 								<!-- Dropdown Menu -->
-								<div id="chatDropdownMenu" class="dropdown ms-auto">
+								<div id="chatDropdownMenu" class="dropdown ms-auto d-none">
 									<button class="btn dropdown-toggle align-items-end" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
 										<i class="bi bi-three-dots-vertical h4 text-light"></i>
 									</button>
