added feature to add/remove friends

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -358,6 +358,7 @@
 										<li><a class="dropdown-item" data-value="Block">Block</a></li>
 										<li><a class="dropdown-item" data-value="Invite To Play">Invite To Play</a></li>
 										<li><a class="dropdown-item" data-value="Profile">Profile</a></li>
+										<li><a class="dropdown-item" data-value="Friend">Add/Remove Friend</a></li>
 									</ul>
 									<select class="custom-select" id="hiddenSelect">
 										<option value="Block">Block</option>
