testing game invite

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -356,7 +356,7 @@
 									</button>
 									<ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
 										<li><a class="dropdown-item" data-value="Block">Block</a></li>
-										<li><a class="dropdown-item" data-value="Invite To Play">Invite To Play</a></li>
+										<li><a class="dropdown-item" data-value="Invite">Invite To Play</a></li>
 										<li><a class="dropdown-item" data-value="Profile">Profile</a></li>
 										<li><a class="dropdown-item" data-value="Friend">Add/Remove Friend</a></li>
 									</ul>
