--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,7 +11,7 @@
 	<link rel="stylesheet" href="style.css">
 
 	<!-- JavaScript Files -->
-	<script src="javascript/chat.js" defer></script>
+	<script type="module" src="javascript/chat.js" defer></script>
 	<script src="javascript/login.js" defer></script>
 	<script src="javascript/player-stats.js" defer></script>
 	<script src="javascript/register.js" defer></script>
