--- a/nginx/frontend/index.html
+++ b/nginx/frontend/index.html
@@ -12,7 +12,7 @@
 
 	<!-- JavaScript Files -->
 	<script type="module" src="javascript/chat.js" defer></script>
-	<script src="javascript/login.js" defer></script>
+	<script type="module" src="javascript/login.js" defer></script>
 	<script src="javascript/player-stats.js" defer></script>
 	<script src="javascript/register.js" defer></script>
 	<script src="javascript/settings.js" defer></script>
