--- a/nginx/frontend/index.html
+++ b/nginx/frontend/index.html
@@ -34,19 +34,19 @@
 				<div class="position-sticky">
 					<ul class="nav navbar flex-column align-items-center justify-content-center">
 						<!-- Profile Button -->
-						<button id="statsBtn" class="btn nav-item mb-3 text-light" data-bs-toggle="modal" data-bs-target="#stats-modal">
+						<button id="statsBtn" class="btn nav-item mb-3 text-light">
 							<i class="bi bi-person h3"></i>
 						</button>
 						<!-- Chat Button -->
-						<button id="chatBtn" class="btn nav-item mb-3 text-light" data-bs-toggle="modal" data-bs-target="#chat-modal">
+						<button id="chatBtn" class="btn nav-item mb-3 text-light">
 							<i class="bi bi-chat h3"></i>
 						</button>
 						<!-- Match History Button -->
-						<button id="matchHistoryBtn" class="btn nav-item mb-3 text-light" data-bs-toggle="modal" data-bs-target="#match-history-modal">
+						<button id="matchHistoryBtn" class="btn nav-item mb-3 text-light">
 							<i class="bi bi-clock-history h3"></i>
 						</button>
 						<!-- Settings Button -->
-						<button id="settingsBtn" class="btn nav-item mb-3 text-light" data-bs-toggle="modal" data-bs-target="#settings-modal">
+						<button id="settingsBtn" class="btn nav-item mb-3 text-light">
 							<i class="bi bi-gear h3"></i>
 						</button>
 					</ul>
@@ -187,7 +187,7 @@
 	</div>
 
 	<!--Login Modal -->
-	<div id="login-modal" class="modal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+	<div id="login-modal" class="modal" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
 		<div class="modal-dialog modal-dialog-centered">
 			<div class="modal-content bg-gradient" style="background-color: rgb(80, 0, 80);">
 				<div class="modal-header">
@@ -225,7 +225,7 @@
 	</div>
 
 	<!-- Register Modal -->
-	<div id="register-modal" class="modal fade" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+	<div id="register-modal" class="modal fade" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
 		<div class="modal-dialog modal-dialog-centered modal-lg">
 			<div class="modal-content" style="background-color: rgb(80, 0, 80);">
 				<div class="modal-header">
@@ -280,7 +280,7 @@
 	</div>
 
 	<!-- Player Stats Modal -->
-	<div id="stats-modal" class="modal fade" data-bs-backdrop="modal" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+	<div id="stats-modal" class="modal fade" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
 		<div class="modal-dialog modal-dialog-centered modal-xl">
 			<div class="modal-content bg-gradient" style="background-color: rgb(80, 0, 80);">
 				<div class="modal-header">
@@ -315,7 +315,7 @@
 	</div>
 
 	<!-- Chat Modal -->
-	<div id="chat-modal" class="modal fade" data-bs-backdrop="modal" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+	<div id="chat-modal" class="modal fade" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
 		<div class="modal-dialog modal-dialog-centered modal-xl">
 			<div class="modal-content bg-gradient" style="background-color: rgb(80, 0, 80);">
 				<div class="modal-header">
@@ -384,7 +384,7 @@
 	</div>	  
 
 	<!-- Match History Modal -->
-	<div class="modal fade" id="match-history-modal" data-bs-backdrop="modal" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+	<div class="modal fade" id="match-history-modal" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
 		<div class="modal-dialog modal-dialog-centered modal-lg">
 			<div class="modal-content bg-gradient" style="background-color: rgb(80, 0, 80);">
 				<div class="modal-header">
@@ -406,7 +406,7 @@
 	</div>
 
 	<!-- Settings Modal -->
-	<div id="settings-modal" class="modal fade" data-bs-backdrop="modal" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+	<div id="settings-modal" class="modal fade" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
 		<div class="modal-dialog modal-dialog-centered modal-lg">
 			<div class="modal-content bg-gradient" style="background-color: rgb(80, 0, 80);">
 				<div class="modal-header">
