--- a/nginx/frontend/index.html
+++ b/nginx/frontend/index.html
@@ -126,7 +126,7 @@
 							<p class="participant_name text-light">Waiting for player...</p>	
 						</div>
 						<h5 class="mt-5 d-flex justify-content-center text-light">
-							<p class="text-light" >Game Id:</p>
+							<p class="text-light" >Tournament ID: </p>
 							<p id="tournamentGameId" class="text-light"></p>
 						</h5>
 					</div>
