Fixed game button that didnt disappear on round 2 of tournaments. Also fixed tournament brackets text

--- a/nginx/frontend/index.html
+++ b/nginx/frontend/index.html
@@ -172,15 +172,15 @@
 							<div class="border px-3 py-4 text-light tournament-winner">...</div>
 						</div>
 					</div>
-					<div id="tournament-text-box" class="d-none">
+					<div id="tournament-text-box" class="">
 						<h4 id="tournament-text" class="text-light"></h4>
-						<button id="tournament-home-button" class="btn bg-gradient btn-block mb-2 home-button" style="background-color: rgb(238, 130, 238)">Main Menu</button>
+						<button id="tournament-home-button" class="btn bg-gradient d-none btn-block mb-2 home-button" style="background-color: rgb(238, 130, 238)">Main Menu</button>
 					</div>
 				</div>
 				<div class="game d-flex flex-column d-none gap-3">
 					<canvas></canvas>
 					<div class="d-flex align-items-center justify-content-center">
-						<button id="canvas-home-button" class="btn bg-gradient btn-block mb-2 home-button d-none" style="background-color: rgb(238, 130, 238)">Main Menu</button>
+						<button id="canvas-home-button" class="btn bg-gradient btn-block d-none mb-2 home-button d-none" style="background-color: rgb(238, 130, 238)">Main Menu</button>
 					</div>
 				</div>
 			</main>
