added sidebar cover

--- a/nginx/frontend/index.html
+++ b/nginx/frontend/index.html
@@ -31,7 +31,7 @@
 	<div class="container-fluid">
 		<div class="row">
 			<!-- Sidebar -->
-			<nav class="col-auto d-md-block bg-gradient" style="background-color: rgb(130, 0, 130);">
+			<nav class="col-auto d-md-block bg-gradient position-relative" style="background-color: rgb(130, 0, 130);">
 				<div class="position-sticky">
 					<ul class="nav navbar flex-column align-items-center justify-content-center">
 						<!-- Profile Button -->
@@ -52,6 +52,7 @@
 						</button>
 					</ul>
 				</div>
+				<div id="sidebar-cover" class="position-absolute d-none"></div>
 			</nav>
 			
 			<!-- Game Content -->
